[build-system]
requires = ["setuptools>=61", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "usde-python"
version = "1.0.0"
description = "Universal Signal Decoding Engine — Python binding"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/example/usde"

[tool.setuptools]
package-dir = { "" = "python" }
packages = ["usde"]

[tool.setuptools.ext-modules]
# Native extension built by CMake or setup.py
# Users should first build the C++ project:
#   cmake -S . -B build -G "Visual Studio 17 2022" -A x64
#   cmake --build build --config Release --target usde_python
# Then copy build/Release/usde_python*.pyd to python/usde/
