[build-system]
requires = ["setuptools>=61", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "usde-python"
version = "1.0.0"
description = "Universal Signal Decoding Engine — Python binding"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/example/usde"

[tool.setuptools]
package-dir = { "" = "python" }
packages = ["usde"]
